src/test/deca/context/valid/test12_read.deca
// Description:
//    Programme testant readInt.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//	Aucun résultat
//
// Historique:
//    cree le 14/01/2020

{
	int x;
	float f;
	
	x=readInt();
	f=-readFloat();
	f=readInt();
}