src/test/deca/context/invalid/test13_assign.deca
// Description:
//    Programme testant la redeclaration de variable.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 16 : Variable f was already defined
//
// Historique:
//    cree le 09/01/2020

{
	string s = "Hello";
	boolean b = s;
}